# Garuda-os

./: .gitignore
backend/: requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  base.py  dharma_guide.py  orchestrator.py  reflection_journal.py  ritual_assistant.py  sadhana_coach.py  scripture_scholar.py
backend/app/api/: __init__.py  auth.py  chat.py  discovery.py  journal.py  nada.py  ritual.py  sadhana.py  scriptures.py  spiritualtube.py  workspace.py
backend/app/core/: __init__.py  audio_ingestion.py  classifier.py  crawl_manager.py  memory_manager.py  moderation.py  multilingual.py  recommendation.py  relationship_engine.py  retrieval.py  scheduler.py  search_engine.py  spotify_search.py  state_engine.py  vector_store.py  youtube_ingestion.py  youtube_search.py
backend/app/models/: __init__.py  graph.py  journal.py  memory.py  nada.py  ritual.py  sadhana.py  spiritualtube.py  user.py  workspace.py
backend/tests/: test_discovery.py  test_expansions.py  test_ingestion_pipelines.py  test_main.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/festivals/: page.tsx
frontend/src/app/journal/: page.tsx
frontend/src/app/nada/: page.tsx
frontend/src/components/: bottom_nav.tsx  context_panel.tsx  sidebar.tsx  top_bar.tsx
frontend/src/utils/: api.ts  spiritual_search.ts
(+6 files in other folders)
