[package]
name = "garuda-dharma-os"
version = "0.1.0"
description = "Garuda Dharma OS Desktop Application"
authors = ["GarudaDharma"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
